force-app/main/default/objects/Selected_Product_Field_Mappings__mdt/Selected_Product_Field_Mappings__mdt.object-meta.xml
<CustomObject>
    <description>List of columns (fields) to be displayed in &quot;Selected Products&quot; section on Add/Edit Products Page based on the Opportunity RT.</description>
    <label>Selected Product Field Mappings</label>
    <pluralLabel>Selected Product Field Mappings</pluralLabel>
</CustomObject>