force-app/main/default/objects/Selected_Product_Field_Mappings__mdt/fields/defaultValue__c.field-meta.xml
<CustomField>
    <fullName>defaultValue__c</fullName>
    <description>holds the default value for the column</description>
    <label>Default Value</label>
    <type>TextArea</type>
</CustomField>