force-app/main/default/objects/Selected_Product_Field_Mappings__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>List of columns (fields) to be displayed in &quot;Selected Products&quot; section on Add/Edit Products Page. Enter field API names.</description>
    <label>Field Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>