force-app/main/default/objects/Selected_Product_Field_Mappings__mdt/fields/Field_Order__c.field-meta.xml
<CustomField>
    <fullName>Field_Order__c</fullName>
    <description>Stores the sequence of the fields</description>
    <label>Field Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>