force-app/main/default/objects/Selected_Product_Field_Mappings__mdt/fields/IsEditable__c.field-meta.xml
<CustomField>
    <fullName>IsEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine list of columns (fields) in &quot;Selected Products&quot; section on Add/Edit Products Page is editable or not.</description>
    <inlineHelpText>Determine list of columns (fields) in &quot;Selected Products&quot; section on Add/Edit Products Page is editable or not.</inlineHelpText>
    <label>IsEditable</label>
    <type>Checkbox</type>
</CustomField>