force-app/main/default/objects/Selected_Product_Field_Mappings__mdt/fields/isVisible__c.field-meta.xml
<CustomField>
    <fullName>isVisible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>