force-app/main/default/objects/Selected_Product_Field_Mappings__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <description>Opportunity Record Type Name (DeveloperName)</description>
    <inlineHelpText>Opportunity Record Type Name (DeveloperName)</inlineHelpText>
    <label>RecordType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>