force-app/main/default/objects/Selected_Product_Field_Mappings__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field_Order__c</columns>
    <columns>Field_Name__c</columns>
    <columns>isRequired__c</columns>
    <columns>IsEditable__c</columns>
    <columns>RecordType__c</columns>
    <columns>isVisible__c</columns>
    <columns>defaultValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>